DRI_PRIME env var on EGL Surfaceless platform is ineffective
Weston test suite uses EGL Surfaceless platform to run GL-renderer tests. I have two cards in my machine, Intel and AMD. Setting DRI_PRIME
environment variable to 1
or the id path tag of either card does not change which card is used. I would expect DRI_PRIME
to have the same effect on EGL Surfaceless as it has on e.g. EGL X11.
This problem exists on Mesa 18.3.6 from Debian and Mesa 20.2.4 built myself, although the former always uses the Intel device and the latter always the AMD device. I tried the master branch too, 20.3-branchpoint-1440-gba74e1be22f
, the same result.
wflinfo --platform=x11_egl --api=gles3
OTOH obeys DRI_PRIME
just fine.