egl: handle DRI_PRIME with surfaceless

this is mostly a direct port of the wayland handling

Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/3987

Tested-by: Pekka Paalanen <pekka.paalanen@collabora.com>
Reviewed-by: Pierre-Eric Pelloux-Prayer <pierre-eric.pelloux-prayer@amd.com>
Acked-by: Daniel Stone <daniels@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/34610>